--- a/person/Yrkovskiy_Boris/1933.html
+++ b/person/Yrkovskiy_Boris/1933.html
@@ -50,15 +50,14 @@
 							<span class='zoom' id='ex2'><img class="text-block gallery__item" src="1933/0002.JPG" alt="Alt"></span><img class="text-block gallery__item photo-hiden" src="1933/0002.JPG" alt="Alt">
 							<span class='zoom' id='ex3'><img class="text-block gallery__item" src="1933/0003.JPG" alt="Alt"></span><img class="text-block gallery__item photo-hiden" src="1933/0003.JPG" alt="Alt">
 							<span class='zoom' id='ex4'><img class="text-block gallery__item" src="1933/0004.JPG" alt="Alt"></span><img class="text-block gallery__item photo-hiden" src="1933/0004.JPG" alt="Alt">
-							<span class='zoom' id='ex5'><img class="text-block gallery__item" src="1933/0005.JPG" alt="Alt"></span><img class="text-block gallery__item photo-hiden" src="1933/0005.JPG" alt="Alt">
-							<span class='zoom' id='ex6'><img class="text-block gallery__item" src="1933/0006.JPG" alt="Alt"></span><img class="text-block gallery__item photo-hiden" src="1933/0006.JPG" alt="Alt">
-							<span class='zoom' id='ex7'><img class="text-block gallery__item" src="1933/0007.JPG" alt="Alt"></span><img class="text-block gallery__item photo-hiden" src="1933/0007.JPG" alt="Alt">
-							<span class='zoom' id='ex8'><img class="text-block gallery__item" src="1933/0008.JPG" alt="Alt"></span><img class="text-block gallery__item photo-hiden" src="1933/0008.JPG" alt="Alt">
-							<span class='zoom' id='ex9'><img class="text-block gallery__item" src="1933/0009.JPG" alt="Alt"></span><img class="text-block gallery__item photo-hiden" src="1933/0009.JPG" alt="Alt">
-							<span class='zoom' id='ex10'><img class="text-block gallery__item" src="1933/0010.JPG" alt="Alt"></span><img class="text-block gallery__item photo-hiden" src="1933/0010.JPG" alt="Alt">
-							<span class='zoom' id='ex11'><img class="text-block gallery__item" src="1933/0011.JPG" alt="Alt"></span><img class="text-block gallery__item photo-hiden" src="1933/0011.JPG" alt="Alt">
-							<span class='zoom' id='ex12'><img class="text-block gallery__item" src="1933/0012.JPG" alt="Alt"></span><img class="text-block gallery__item photo-hiden" src="1933/0012.JPG" alt="Alt">
-							<span class='zoom' id='ex13'><img class="text-block gallery__item" src="1933/0013.JPG" alt="Alt"></span><img class="text-block gallery__item photo-hiden" src="1933/0013.JPG" alt="Alt">
+							<span class='zoom' id='ex6'><img class="text-block gallery__item" src="1933/0006.jpg" alt="Alt"></span><img class="text-block gallery__item photo-hiden" src="1933/0006.jpg" alt="Alt">
+							<span class='zoom' id='ex7'><img class="text-block gallery__item" src="1933/0007.jpg" alt="Alt"></span><img class="text-block gallery__item photo-hiden" src="1933/0007.jpg" alt="Alt">
+							<span class='zoom' id='ex8'><img class="text-block gallery__item" src="1933/0008.jpg" alt="Alt"></span><img class="text-block gallery__item photo-hiden" src="1933/0008.jpg" alt="Alt">
+							<span class='zoom' id='ex9'><img class="text-block gallery__item" src="1933/0009.jpg" alt="Alt"></span><img class="text-block gallery__item photo-hiden" src="1933/0009.jpg" alt="Alt">
+							<span class='zoom' id='ex10'><img class="text-block gallery__item" src="1933/0010.jpg" alt="Alt"></span><img class="text-block gallery__item photo-hiden" src="1933/0010.jpg" alt="Alt">
+							<span class='zoom' id='ex11'><img class="text-block gallery__item" src="1933/0011.jpg" alt="Alt"></span><img class="text-block gallery__item photo-hiden" src="1933/0011.jpg" alt="Alt">
+							<span class='zoom' id='ex12'><img class="text-block gallery__item" src="1933/0012.jpg" alt="Alt"></span><img class="text-block gallery__item photo-hiden" src="1933/0012.jpg" alt="Alt">
+							<span class='zoom' id='ex13'><img class="text-block gallery__item" src="1933/0013.jpg" alt="Alt"></span><img class="text-block gallery__item photo-hiden" src="1933/0013.jpg" alt="Alt">
 							<span class='zoom' id='ex14'><img class="text-block gallery__item" src="1933/0014.JPG" alt="Alt"></span><img class="text-block gallery__item photo-hiden" src="1933/0014.JPG" alt="Alt">
 							<span class='zoom' id='ex15'><img class="text-block gallery__item" src="1933/0015.JPG" alt="Alt"></span><img class="text-block gallery__item photo-hiden" src="1933/0015.JPG" alt="Alt">
 							<span class='zoom' id='ex16'><img class="text-block gallery__item" src="1933/0016.JPG" alt="Alt"></span><img class="text-block gallery__item photo-hiden" src="1933/0016.JPG" alt="Alt">
