--- a/person/Zaharchuk_Sergey.html
+++ b/person/Zaharchuk_Sergey.html
@@ -103,9 +103,9 @@
 							</div>
 
 							<span class='zoom' id='ex5'><img class="text-block gallery__item" 
-								src="Zaharchuk_Sergey/+/301A4865.JPG" alt="Alt"></span>
+								src="Zaharchuk_Sergey/+/301A4865.jpg" alt="Alt"></span>
 								<img class="text-block gallery__item photo-hiden" 
-								src="Zaharchuk_Sergey/+/301A4865.JPG" alt="Alt">
+								src="Zaharchuk_Sergey/+/301A4865.jpg" alt="Alt">
 
 							<div class="text-block gallery__item">
 								<p class="text-block__p">
