--- a/person/Zelenchuk_Tamara.html
+++ b/person/Zelenchuk_Tamara.html
@@ -64,7 +64,7 @@
 								</p>
 							</div>
 
-							<img class="text-block gallery__item product-photo" src="Zelenchuk_Tamara/000.JPG" alt="Alt">
+							<img class="text-block gallery__item product-photo" src="Zelenchuk_Tamara/000.jpg" alt="Alt">
 
 							<div class="text-block gallery__item">
 								<p class="text-block__p">
