--- a/person/Yrkovskaya_Zina.html
+++ b/person/Yrkovskaya_Zina.html
@@ -72,7 +72,7 @@
 							<span class='zoom' id='ex4'><img class="text-block gallery__item" src="Yrkovskaya_Zina/003.jpg" alt="Alt"></span>
 							<span class='zoom' id='ex5'><img class="text-block gallery__item" src="Yrkovskaya_Zina/004.jpg" alt="Alt"></span>
 							<span class='zoom' id='ex6'><img class="text-block gallery__item" src="Yrkovskaya_Zina/005.jpg" alt="Alt"></span>
-							<span class='zoom' id='ex7'><img class="text-block gallery__item" src="Yrkovskaya_Zina/006.jpg" alt="Alt"></span>
+							<span class='zoom' id='ex7'><img class="text-block gallery__item" src="Yrkovskaya_Zina/006.JPG" alt="Alt"></span>
 							<span class='zoom' id='ex8'><img class="text-block gallery__item" src="Yrkovskaya_Zina/Зина.jpg" alt="Alt"></span>
 							<span class='zoom' id='ex9'><img class="text-block gallery__item" src="Yrkovskaya_Zina/Папа-Зина-Соня-Ира.jpg" alt="Alt"></span>
 
@@ -81,7 +81,7 @@
 							<img class="text-block gallery__item photo-hiden" src="Yrkovskaya_Zina/003.jpg" alt="Alt">
 							<img class="text-block gallery__item photo-hiden" src="Yrkovskaya_Zina/004.jpg" alt="Alt">
 							<img class="text-block gallery__item photo-hiden" src="Yrkovskaya_Zina/005.jpg" alt="Alt">
-							<img class="text-block gallery__item photo-hiden" src="Yrkovskaya_Zina/006.jpg" alt="Alt">
+							<img class="text-block gallery__item photo-hiden" src="Yrkovskaya_Zina/006.JPG" alt="Alt">
 							<img class="text-block gallery__item photo-hiden" src="Yrkovskaya_Zina/Зина.jpg" alt="Alt">
 							<img class="text-block gallery__item photo-hiden" src="Yrkovskaya_Zina/Папа-Зина-Соня-Ира.jpg" alt="Alt">
 									
