--- a/person/Zaharchuk_Nikodim.html
+++ b/person/Zaharchuk_Nikodim.html
@@ -79,7 +79,7 @@
 							
 							<img class="text-block gallery__item" src="Zaharchuk_Nikodim/005.jpg" alt="Alt">
 							<img class="text-block gallery__item" src="Zaharchuk_Nikodim/006.jpg" alt="Alt">
-							<img class="text-block gallery__item" src="Zaharchuk_Nikodim/007.jpg" alt="Alt">
+							<img class="text-block gallery__item" src="Zaharchuk_Nikodim/007.JPG" alt="Alt">
 							
 							<!-- <div class="text-block gallery__item">
 								<p class="text-block__p"><a href="Yrkovskiy_Boris/1933.html">Дело 1933</a></p>
