--- a/person/Zelenchyk_Irina.html
+++ b/person/Zelenchyk_Irina.html
@@ -75,9 +75,9 @@
 								</p>
 							</div>
 							<span class='zoom' id='ex3'>
-								<img class="text-block gallery__item product-photo" src="Zelenchyk_Irina/004.jpg" alt="Alt">
+								<img class="text-block gallery__item product-photo" src="Zelenchyk_Irina/004.JPG" alt="Alt">
 							</span>
-							<img class="text-block gallery__item product-photo photo-hiden" src="Zelenchyk_Irina/004.jpg" alt="Alt">
+							<img class="text-block gallery__item product-photo photo-hiden" src="Zelenchyk_Irina/004.JPG" alt="Alt">
 							<div class="text-block gallery__item">
 								<p class="text-block__p">
 									Супруг: Ким Анатолий Сунбаевич (1950г.р.).
