--- a/person/Zaharchuk_Sergey.html
+++ b/person/Zaharchuk_Sergey.html
@@ -162,15 +162,15 @@
 							<script src="js/main.js"></script>
 
 							<div class="text-block gallery__item">
-								<iframe width="560" height="315" src="https://www.youtube.com/embed/AvKm1dUd_0g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+								<iframe src="https://www.youtube.com/embed/AvKm1dUd_0g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 							</div>
 
 							<div class="text-block gallery__item">
-								<iframe width="560" height="315" src="https://www.youtube.com/embed/itcUSfsOJ3A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+								<iframe src="https://www.youtube.com/embed/itcUSfsOJ3A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 							</div>
 
 							<div class="text-block gallery__item">
-								<iframe width="560" height="315" src="https://www.youtube.com/embed/agmlvZsvstE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+								<iframe src="https://www.youtube.com/embed/agmlvZsvstE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 							</div>
 		
 						</div>
