--- a/person/Zaharchuk_Evgeniy.html
+++ b/person/Zaharchuk_Evgeniy.html
@@ -106,8 +106,8 @@
 								</p>
 							</div>
 
-							<div class="text-block gallery__item">
-								<iframe width="560" height="315" src="https://www.youtube.com/embed/Q1qwZ9tGxno" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+							<div class="text-block gallery__item video">
+								<iframe src="https://www.youtube.com/embed/Q1qwZ9tGxno" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 							</div>
 								
 						</div>
