--- a/person/Zaharchuk_Sergey.html
+++ b/person/Zaharchuk_Sergey.html
@@ -161,15 +161,15 @@
 							</div>
 							<script src="js/main.js"></script>
 
-							<div class="text-block gallery__item">
+							<div class="text-block gallery__item video">
 								<iframe src="https://www.youtube.com/embed/AvKm1dUd_0g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 							</div>
 
-							<div class="text-block gallery__item">
+							<div class="text-block gallery__item video">
 								<iframe src="https://www.youtube.com/embed/itcUSfsOJ3A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 							</div>
 
-							<div class="text-block gallery__item">
+							<div class="text-block gallery__item video">
 								<iframe src="https://www.youtube.com/embed/agmlvZsvstE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 							</div>
 		
