--- a/istoriya.html
+++ b/istoriya.html
@@ -46,41 +46,41 @@
 
 						<div data-speed="1" class="gallery__cent">
 
-							<div class="text-block gallery__item">
+							<div class="text-block gallery__item video">
 								<p class="text-block__p"><a href="https://ru.wikipedia.org/wiki/%D0%91%D1%83%D1%88%D0%B0">Википедия (читать далее...)</a></p>
 							</div>
 							
 
-							<div class="text-block gallery__item">
-								<iframe width="800" height="400" src="https://www.youtube.com/embed/ySINDWDEhs4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+							<div class="text-block gallery__item video">
+								<iframe src="https://www.youtube.com/embed/ySINDWDEhs4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 							</div>
 
-							<div class="text-block gallery__item">
-								<iframe width="800" height="400" src="https://www.youtube.com/embed/-g3H3eWUMm4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+							<div class="text-block gallery__item video">
+								<iframe src="https://www.youtube.com/embed/-g3H3eWUMm4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 							</div>
 
-							<div class="text-block gallery__item">
-								<iframe width="800" height="400" src="https://www.youtube.com/embed/faoILRCUBII" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+							<div class="text-block gallery__item video">
+								<iframe src="https://www.youtube.com/embed/faoILRCUBII" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 							</div>
 
-							<div class="text-block gallery__item">
-								<iframe width="800" height="400" src="https://www.youtube.com/embed/u19mtJ1D8C0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+							<div class="text-block gallery__item video">
+								<iframe src="https://www.youtube.com/embed/u19mtJ1D8C0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 							</div>
 
-							<div class="text-block gallery__item">
-								<iframe width="800" height="400" src="https://www.youtube.com/embed/l8b7QNxj2-Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+							<div class="text-block gallery__item video">
+								<iframe src="https://www.youtube.com/embed/l8b7QNxj2-Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 							</div>
 
-							<div class="text-block gallery__item">
-								<iframe width="800" height="400" src="https://www.youtube.com/embed/Bk6_u0zIces" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+							<div class="text-block gallery__item video">
+								<iframe src="https://www.youtube.com/embed/Bk6_u0zIces" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 							</div>
 
-							<div class="text-block gallery__item">
-								<iframe width="800" height="400" src="https://www.youtube.com/embed/JqIOaeIdOyo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+							<div class="text-block gallery__item video">
+								<iframe src="https://www.youtube.com/embed/JqIOaeIdOyo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 							</div>
 
-							<div class="text-block gallery__item">
-								<iframe width="800" height="400" src="https://www.youtube.com/embed/qqWjMVOErO8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+							<div class="text-block gallery__item video">
+								<iframe src="https://www.youtube.com/embed/qqWjMVOErO8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 							</div>
 		
 						</div>
