--- a/person/Zaharchuk_Anton.html
+++ b/person/Zaharchuk_Anton.html
@@ -105,7 +105,7 @@
 								</p>
 							</div>							
 
-							<div id="slider" class="slider">
+							<div id="slider" class="slider gallery__item">
 								<div class="slider-item active" style="background-image: url(Zaharchuk_Anton/001.jpg)"></div>								
 								<div class="slider-item" style="background-image: url(Zaharchuk_Anton/002.jpg)"></div>
 								<div class="slider-item" style="background-image: url(Zaharchuk_Anton/003.jpg)"></div>
