--- a/person/Zaharchuk_Boris.html
+++ b/person/Zaharchuk_Boris.html
@@ -111,7 +111,7 @@
 							<img class="text-block gallery__item photo-hiden" src="Zaharchuk_Boris/01.jpg" alt="Alt">
 							<img class="text-block gallery__item photo-hiden" src="Zaharchuk_Boris/02.jpg" alt="Alt">
 
-							<div id="slider" class="slider text-block gallery__item">
+							<div id="slider" class="slider gallery__item">
 								<div class="slider-item active" style="background-image: url(Zaharchuk_Boris/слайд/сл001.jpg)"></div>
 								<div class="slider-item" style="background-image: url(Zaharchuk_Boris/slayder1/сл002.jpg)"></div>
 								<div class="slider-item" style="background-image: url(Zaharchuk_Boris/slayder1/сл003.jpg)"></div>
