--- a/person/Zaharchuk_Sergey_ml.html
+++ b/person/Zaharchuk_Sergey_ml.html
@@ -66,7 +66,7 @@
 							</div>
 
 
-							<div id="slider" class="slider">
+							<div id="slider" class="slider gallery__item">
 								<div class="slider-item active" style="background-image: url(Zaharchuk_Sergey_ml/001.jpg)"></div>
 								<div class="slider-item" style="background-image: url(Zaharchuk_Sergey_ml/002.jpg)"></div>
 								<div class="slider-item" style="background-image: url(Zaharchuk_Sergey_ml/003.jpg)"></div>
