--- a/person/Zaharchuk_Sergey.html
+++ b/person/Zaharchuk_Sergey.html
@@ -115,7 +115,7 @@
 							</div>
 
 
-							<div id="slider" class="slider text-block gallery__item">
+							<div id="slider" class="slider gallery__item">
 								<div class="slider-item active" style="background-image: url(Zaharchuk_Sergey/sl/001.jpg)"></div>
 								<div class="slider-item" style="background-image: url(Zaharchuk_Sergey/sl/002.jpg)"></div>
 								<div class="slider-item" style="background-image: url(Zaharchuk_Sergey/sl/003.jpg)"></div>
