--- a/person/Zaharchuk_Dariya.html
+++ b/person/Zaharchuk_Dariya.html
@@ -101,7 +101,7 @@
 								</p>
 							</div>							
 
-							<div id="slider" class="slider">
+							<div id="slider" class="slider gallery__item">
 								<div class="slider-item active" style="background-image: url(Zaharchuk_Dariya/001.jpg)"></div>								
 								<div class="slider-item" style="background-image: url(Zaharchuk_Dariya/002.jpg)"></div>
 								<div class="slider-item" style="background-image: url(Zaharchuk_Dariya/003.jpg)"></div>
