--- a/person/Zaharchuk_Anna.html
+++ b/person/Zaharchuk_Anna.html
@@ -103,7 +103,7 @@
 								</p>
 							</div>							
 
-							<div id="slider" class="slider">
+							<div id="slider" class="slider gallery__item">
 								<div class="slider-item active" style="background-image: url(Zaharchuk_Anna/001.jpg)"></div>								
 								<div class="slider-item" style="background-image: url(Zaharchuk_Anna/002.jpg)"></div>
 								<div class="slider-item" style="background-image: url(Zaharchuk_Anna/003.jpg)"></div>
