--- a/person/Kyrmanova_Mahabbat.html
+++ b/person/Kyrmanova_Mahabbat.html
@@ -62,7 +62,7 @@
 
 							<div class="text-block gallery__item">
 								<p class="text-block__p">
-									Родители: Курманова Елена, Камербаев Аралбай.
+									Родители: Курманова Елена Канапиевна, Камербаев Аралбай.
 								</p>
 							</div>
 
