--- a/person/Kyrmanova_Elena.html
+++ b/person/Kyrmanova_Elena.html
@@ -64,7 +64,7 @@
 						
 							<div class="text-block gallery__item">
 								<p class="text-block__p">
-									Родители: Курманова (Захарчук) Лидия Никодимовна (1929-2001), Курманов Канапия Курманович(1924-1976).
+									Родители: Курманова (Захарчук) Лидия Никодимовна (1929-2001), Курманов Канапья Курманович(1924-1976).
 								</p>
 							</div>
 							
