--- a/person/Kyrmanova_Mahabbat.html
+++ b/person/Kyrmanova_Mahabbat.html
@@ -86,7 +86,7 @@
 
 							<div class="text-block gallery__item">
 								<p class="text-block__p">
-									На фото Курманов Канапия, Махаббат, Лидия Захарчук, Елена Курманов (вверху).
+									На фото Курманов Канапья, Махаббат, Лидия Захарчук, Елена Курманова (вверху).
 								</p>
 							</div>
 		
