--- a/person/Zaharchuk_Lidiya.html
+++ b/person/Zaharchuk_Lidiya.html
@@ -70,8 +70,8 @@
 							<img class="text-block gallery__item product-photo photo-hiden" src="Zaharchuk_Lidiya/003.jpg" alt="Alt">
 							<div class="text-block gallery__item">
 								<p class="text-block__p">
-									Вышла замуж за Курманова Конопию.
-									Конопия Курманов (1924-1976).
+									Вышла замуж за Курманова Конопью.
+									Конопья Курманов (1924-1976).
 								</p>
 							</div>
 							<span class='zoom' id='ex6'>
