--- a/person/Zaharchuk_Sofiya.html
+++ b/person/Zaharchuk_Sofiya.html
@@ -63,7 +63,7 @@
 							
 							<div class="text-block gallery__item">
 								<p class="text-block__p">
-									На фото слева направо верхний ряд: Тамара, Лидия, Борис, Евгения, София. Нижний ряд: Курманов Конопия, Зинаида и Никодим Захарчук.
+									На фото слева направо верхний ряд: Тамара, Лидия, Борис, Евгения, София. Нижний ряд: Курманов Конопья, Зинаида и Никодим Захарчук.
 								</p>
 							</div>
 
