--- a/person/Ahremenko_Aleksey.html
+++ b/person/Ahremenko_Aleksey.html
@@ -46,11 +46,11 @@
 
 						<div data-speed="1" class="gallery__cent">
 
-							<!-- <div class="text-block gallery__item">
+							<div class="text-block gallery__item">
 								<h2 class="text-block__h">
-									1907 г.р.
+									1971 - 1986
 								</h2>							
-							</div> -->
+							</div> 
 
 							<div class="text-block gallery__item">
 								<p class="text-block__p">
