--- a/person/Zaharchuk_Boris.html
+++ b/person/Zaharchuk_Boris.html
@@ -54,6 +54,14 @@
 
 							<span class='zoom' id='ex2'><img class="text-block gallery__item" src="Zaharchuk_Boris/001.jpg" alt="Alt"></span>
 							<img class="text-block gallery__item photo-hiden" src="Zaharchuk_Boris/001.jpg" alt="Alt">
+							
+							<div class="text-block gallery__item">
+								<p class="text-block__p">
+									Родители: Захарчук Никодим, Юрковская (Захарчук) Зинаида.
+								</p>
+							</div>
+							<span class='zoom' id='ex1'><img class="text-block gallery__item" src="Zaharchuk_Boris/007.jpg" alt="Alt"></span>
+							<img class="text-block gallery__item photo-hiden" src="Zaharchuk_Boris/007.jpg" alt="Alt">
 
 							<div class="text-block gallery__item">
 								<p class="text-block__p">
