--- a/tree.html
+++ b/tree.html
@@ -115,7 +115,7 @@
 				<td class="space_td_min"></td> -->
 				<td class="name_td4" id="two02"><a href="person/Zaharchuk_Vasiliy.html">Захарчук<br>Василий</a></td>
 				<td class="space_td_norm"></td>
-				<td class="name_td4" id="two03"><a href="person/no_info.html">Захарчук<br>Марина</a></td>
+				<td class="name_td4" id="two03"><a href="person/Zaharchuk_Marina.html">Захарчук<br>Марина</a></td>
 				<td class="space_td_min"></td>
 				<td class="name_td4" id="two04"><a href="person/no_info.html">Захарчук<br>Маланья</a></td>
 				<td class="space_td_min"></td>
