--- a/person/Zaharchuk_Marina.html
+++ b/person/Zaharchuk_Marina.html
@@ -47,7 +47,7 @@
 
 							<div class="text-block gallery__item">
 								<p class="text-block__p">
-									Муж - Бортняк Яков
+									Муж - Бортняк Яков.<br>
 									Дети: Бортняк Петр, Бортняк Иван, дочь - ?.
 									</p>
 							</div>
