--- a/person/Zaharchuk_Marina.html
+++ b/person/Zaharchuk_Marina.html
@@ -47,7 +47,7 @@
 
 							<div class="text-block gallery__item">
 								<p class="text-block__p">
-									Муж - Бортняк Яков.<br>
+									Муж: Бортняк Яков.<br>
 									Дети: Бортняк Петр, Бортняк Иван, дочь - ?.
 									</p>
 							</div>
@@ -56,7 +56,7 @@
 
 							<div class="text-block gallery__item">
 								<p class="text-block__p">
-									Бортняк Иван Яковлевич - Заведующий больницей в селе Яруга
+									Бортняк Иван Яковлевич: Заведующий больницей в селе Яруга
 									</p>
 							</div>
 
@@ -68,7 +68,7 @@
 
 							<div class="text-block gallery__item">
 								<p class="text-block__p">
-									Второй брак: Жена - Надежда Владимировна работала в больнице села Яруга (умерла 2003г.)
+									Второй брак: Жена - Надежда Владимировна, работала в больнице села Яруга (умерла 2003г.)
 									</p>
 							</div>
 							
@@ -80,7 +80,7 @@
 
 							<div class="text-block gallery__item">
 								<p class="text-block__p">
-									В настоящее время Бортняк Валентина прожывает в городе Могилеве-Подольском.
+									В настоящее время Бортняк Валентина проживает в городе Могилеве-Подольском.
 									</p>
 							</div>
 
