--- a/person/Zaharchuk_Marina.html
+++ b/person/Zaharchuk_Marina.html
@@ -56,7 +56,15 @@
 
 							<div class="text-block gallery__item">
 								<p class="text-block__p">
-									Бортняк Иван Яковлевич: Заведующий больницей в селе Яруга
+									Бортняк Иван Яковлевич
+									</p>
+							</div>
+
+							<img class="text-block gallery__item product-photo" src="Zaharchuk_Marina/БОРТНЯК.jpg" alt="Alt">
+
+							<div class="text-block gallery__item">
+								<p class="text-block__p">
+									Заведующий больницей в селе Яруга
 									</p>
 							</div>
 
