--- a/person/Zaharchuk_Marina.html
+++ b/person/Zaharchuk_Marina.html
@@ -64,6 +64,12 @@
 
 							<div class="text-block gallery__item">
 								<p class="text-block__p">
+									24.11.1919 - 04.11.1978 
+									</p>
+							</div>
+
+							<div class="text-block gallery__item">
+								<p class="text-block__p">
 									Заведующий больницей в селе Яруга
 									</p>
 							</div>
