--- a/person/Zaharchuk_Vasiliy.html
+++ b/person/Zaharchuk_Vasiliy.html
@@ -69,7 +69,7 @@
 
 							<div class="text-block gallery__item">
 								<p class="text-block__p">
-									Дети: Анатолий, Адик, Галина (тётя Алла - Донецк, муж Александр Мурашко)
+									Дети: Анатолий, Адик, Галина (тётя Алла - Донецк, муж Александр Марушко)
 								</p>
 							</div>
 
